[tool.poetry]
name = "download-all-videos-from-youtube-channel"
version = "0.1.0"
description = ""
authors = ["なるみ <toucans-cutouts0f@icloud.com>"]
readme = "README.md"
packages = [{include = "download_all_videos_from_youtube_channel"}]

[tool.poetry.dependencies]
python = "^3.8"
yt-dlp = "^2022.9.1"
click = "^8.1.3"
google-api-python-client = "^2.62.0"
tqdm = "^4.64.1"
toml = "^0.10.2"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
